base/metabase-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  replicas: 2
  selector:
    matchLabels:
  template:
    spec:
      containers:
      - name: dpl
        image: ${IMAGE_FROM_BUILD_DOCKERFILE}
        resources:
          requests:
            cpu: "1"
            memory: "4Gi"
          limits:
            memory: "4Gi"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /
            port: 3000
          failureThreshold: 30
          periodSeconds: 10
