base/metabase-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  name: svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
