base/metabase-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-test
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    ingress.kubernetes.io/ssl-redirect: "false"
  name: ing
spec:
  rules:
  - host: $(SERVICE_NAME).blablabla.com
    http:
      paths:
      - backend:
          serviceName: svc
          servicePort: 80
        path: /
  tls:
  - hosts:
    - $(SERVICE_NAME).blablabla.com
    secretName: $(SERVICE_NAME)-secret
